--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2024.8.30
 charset-normalizer==3.4.0
 contourpy==1.3.1
 cycler==0.12.1
+et_xmlfile==2.0.0
 fonttools==4.55.1
 frozendict==2.4.6
 html5lib==1.1
@@ -12,6 +13,7 @@ lxml==5.3.0
 matplotlib==3.9.3
 multitasking==0.0.11
 numpy==2.1.3
+openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
 peewee==3.17.8
